--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dark-icon-generator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest --config jestconfig.json",
