--- a/jestconfig.json
+++ b/jestconfig.json
@@ -10,5 +10,8 @@
         "jsx",
         "json",
         "node"
-    ]
+    ],
+    "moduleNameMapper": {
+        "^\\./core\\.js$": "<rootDir>/src/core.ts"
+    }
 }
