--- a/package.json
+++ b/package.json
@@ -3,9 +3,28 @@
   "version": "1.0.3",
   "description": "",
   "main": "lib/index.js",
+  "module": "lib/esm/index.js",
+  "browser": "lib/esm/browser.js",
   "types": "lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/index.d.ts",
+      "require": "./lib/index.js",
+      "import": "./lib/esm/index.js",
+      "browser": "./lib/esm/browser.js",
+      "default": "./lib/index.js"
+    },
+    "./browser": {
+      "types": "./lib/browser.d.ts",
+      "require": "./lib/browser.js",
+      "import": "./lib/esm/browser.js"
+    }
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -p tsconfig.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "demo:prepare": "npm run build && node scripts/prepare-browser-demo.js",
     "test": "jest --config jestconfig.json",
     "lint": "eslint .",
     "prepare": "npm run build",
