feat: Switch to @napi-rs/canvas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "outDir": "./lib",
         "strict": true,
         "lib": [
-            "es6",
+            "esnext",
             "dom"
         ]
     },
